@@ -5,6 +5,7 @@ TMW.CHANGELOG_LASTVER="6.2.6"
 TMW.CHANGELOG = [==[
 ===v8.4.1===
 * Compatibility updates for patch 7.3.0.
+* Added Light's Hammer tracking to the totem/Consecration icon type.
 
 ===v8.4.0===
 * Compatibility updates for patch 7.2.5.
