@@ -1,5 +1,6 @@
 ===v8.4.1===
 * Compatibility updates for patch 7.3.0.
+* Added Light's Hammer tracking to the totem/Consecration icon type.
 
 ===v8.4.0===
 * Compatibility updates for patch 7.2.5.
